--- a/main.html
+++ b/main.html
@@ -7,7 +7,26 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	 <table>
+        <caption ><b>Student Details</b></caption>
+
+        <tr>
+            <th>NAME</th>
+            <th>AGE</th>
+            <th>BRANCH</th>
+        </tr>
+
+        <tr>
+            <td><b>Shaw</b></td>
+            <td><b>20</b></td>
+            <td><b>CSE</b></td>
+        </tr>
+        <tr>
+            <td><b>Adil</b></td>
+            <td><b>21</b></td>
+            <td><b>ECE</b></td>
+        </tr>
+    </table>
     <script type="text/javascript" src="./script.js">
 </script>
 
